--- a/MordorEditor/MordorEditor.csproj
+++ b/MordorEditor/MordorEditor.csproj
@@ -7,4 +7,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MordorCore.DAL\MordorCore.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
